--- a/pkg/fabric/testdata/build-input-with-client-version.yaml
+++ b/pkg/fabric/testdata/build-input-with-client-version.yaml
@@ -1,7 +1,7 @@
 config:
   clientVersion: v0.0.0
 install:
-  - skeletor:
+  - fabric:
       description: "Summon Minion"
       arguments:
       - "man-e-faces"
